net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/SubnetRouteTableTest[2021-04-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-24668ab75706f6be1c27ab87e142ae7c-746b4faa15e9de02-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2c2c2e8dc91f67dffc22d8ef9075a2b7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:55 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "005bfd6d-b7f4-4b7b-ae9d-d249043fc354",
        "x-ms-ratelimit-remaining-subscription-reads": "11739",
        "x-ms-request-id": "005bfd6d-b7f4-4b7b-ae9d-d249043fc354",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155156Z:005bfd6d-b7f4-4b7b-ae9d-d249043fc354"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg9083?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-5408906b679eefa1cb584f8a2f56d867-20e2b549cb26f36e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "62f2b2be8263f9144ee5c08b717f55ac",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:56 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "564c12c2-6ed9-4a5e-b92d-870913f23a2b",
        "x-ms-ratelimit-remaining-subscription-writes": "1136",
        "x-ms-request-id": "564c12c2-6ed9-4a5e-b92d-870913f23a2b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155156Z:564c12c2-6ed9-4a5e-b92d-870913f23a2b"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083",
        "name": "csmrg9083",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "183",
        "Content-Type": "application/json",
        "traceparent": "00-9fb17006c5bead034bcd9824d566f69c-24ccf8717fc86977-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a6e8e545b8676d8b8ac37cf0cb4acb25",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/5bdb97ac-dd09-450f-b717-cb7ad578b6ee?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1074",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:59 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "69f2504f-6193-4b00-92ac-c28289b8693b",
        "x-ms-client-request-id": "a6e8e545b8676d8b8ac37cf0cb4acb25",
        "x-ms-correlation-request-id": "72957350-db9c-4e1b-aa1d-d4247874e36c",
        "x-ms-ratelimit-remaining-subscription-writes": "1135",
        "x-ms-request-id": "5bdb97ac-dd09-450f-b717-cb7ad578b6ee",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155159Z:72957350-db9c-4e1b-aa1d-d4247874e36c"
      },
      "ResponseBody": {
        "name": "azsmnet1575",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575",
        "etag": "W/\"e35ce3c0-8910-411d-aed5-118b146de6c4\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "8cfbfd89-9e8c-4b8f-a9b4-6802e93d241f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4587",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575/routes/azsmnet4587",
              "etag": "W/\"e35ce3c0-8910-411d-aed5-118b146de6c4\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/5bdb97ac-dd09-450f-b717-cb7ad578b6ee?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-9fb17006c5bead034bcd9824d566f69c-c1f4c2b02c38438f-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d25cbbdf18fc3a4ad6f5f7507d5d1975",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:59 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "aecd0fef-420c-4a74-a7de-149f394597d5",
        "x-ms-client-request-id": "d25cbbdf18fc3a4ad6f5f7507d5d1975",
        "x-ms-correlation-request-id": "8d67075d-c783-4a0d-93a5-b3be319d884e",
        "x-ms-ratelimit-remaining-subscription-reads": "11738",
        "x-ms-request-id": "13740d22-7fb6-4355-ace8-598097f26d92",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155200Z:8d67075d-c783-4a0d-93a5-b3be319d884e"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-9fb17006c5bead034bcd9824d566f69c-77c5544c3efba65f-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "38a94cbfacdd9a8fcdb5d48398b0e3e7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1076",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:00 GMT",
        "ETag": "W/\"a783dbf7-3ed9-43dd-92ef-a72125b9b9b0\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "52a1f855-f2ae-4659-9162-747bc2f88013",
        "x-ms-client-request-id": "38a94cbfacdd9a8fcdb5d48398b0e3e7",
        "x-ms-correlation-request-id": "0afb675d-19f3-4c75-a0fa-c86b7363a189",
        "x-ms-ratelimit-remaining-subscription-reads": "11737",
        "x-ms-request-id": "7a6989fc-d544-4c4f-a79b-a18b3128d1d7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155200Z:0afb675d-19f3-4c75-a0fa-c86b7363a189"
      },
      "ResponseBody": {
        "name": "azsmnet1575",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575",
        "etag": "W/\"a783dbf7-3ed9-43dd-92ef-a72125b9b9b0\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "8cfbfd89-9e8c-4b8f-a9b4-6802e93d241f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4587",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575/routes/azsmnet4587",
              "etag": "W/\"a783dbf7-3ed9-43dd-92ef-a72125b9b9b0\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-0d56bd5279c1a556e34e626ac5c90f4d-1a02dab6d1fa07cc-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0f113940f9eebd29d2942e33b4c8b573",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1076",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:00 GMT",
        "ETag": "W/\"a783dbf7-3ed9-43dd-92ef-a72125b9b9b0\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "cd7221e7-567f-40bd-9734-75757271c8b5",
        "x-ms-client-request-id": "0f113940f9eebd29d2942e33b4c8b573",
        "x-ms-correlation-request-id": "91bae9d0-1127-4d83-8669-774ab4829f97",
        "x-ms-ratelimit-remaining-subscription-reads": "11736",
        "x-ms-request-id": "05602bb5-69c8-4107-b356-0c524b0a3448",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155201Z:91bae9d0-1127-4d83-8669-774ab4829f97"
      },
      "ResponseBody": {
        "name": "azsmnet1575",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575",
        "etag": "W/\"a783dbf7-3ed9-43dd-92ef-a72125b9b9b0\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "8cfbfd89-9e8c-4b8f-a9b4-6802e93d241f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4587",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575/routes/azsmnet4587",
              "etag": "W/\"a783dbf7-3ed9-43dd-92ef-a72125b9b9b0\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479?api-version=2025-07-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "387",
        "Content-Type": "application/json",
        "traceparent": "00-618e25c793ae171bc2b86bac75573a61-3a17fdc5c0a2b3e1-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4bfa3e1b3265c22b054743c6a1261210",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0e346edb-2846-4d7e-a0b8-4f3b90f5537f?api-version=2025-07-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1170",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:03 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a28bd8ce-8854-492c-aad1-7e3d6d89d2ae",
        "x-ms-client-request-id": "4bfa3e1b3265c22b054743c6a1261210",
        "x-ms-correlation-request-id": "a2c80f53-eef9-4ff2-8445-87221e185819",
        "x-ms-ratelimit-remaining-subscription-writes": "1134",
        "x-ms-request-id": "0e346edb-2846-4d7e-a0b8-4f3b90f5537f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155204Z:a2c80f53-eef9-4ff2-8445-87221e185819"
      },
      "ResponseBody": {
        "name": "azsmnet5479",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479",
        "etag": "W/\"ff14f085-a415-4c34-bca5-4cf417a0c0d9\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "08ef8886-53e6-4d97-8eb6-0bec9bbb1bc8",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet6657",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479/subnets/azsmnet6657",
              "etag": "W/\"ff14f085-a415-4c34-bca5-4cf417a0c0d9\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0e346edb-2846-4d7e-a0b8-4f3b90f5537f?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-618e25c793ae171bc2b86bac75573a61-9a596f98e1a4c0d7-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a494efb8f5edded4e42bf3e1790cf307",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:04 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "be184c27-520d-46b9-8422-18e5034c5367",
        "x-ms-client-request-id": "a494efb8f5edded4e42bf3e1790cf307",
        "x-ms-correlation-request-id": "923eb82b-184c-4881-b8fc-c2d3f9f977ee",
        "x-ms-ratelimit-remaining-subscription-reads": "11735",
        "x-ms-request-id": "f82e6658-93f4-4511-84eb-9cc292402796",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155205Z:923eb82b-184c-4881-b8fc-c2d3f9f977ee"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-618e25c793ae171bc2b86bac75573a61-393a11a3444b7870-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "72b8a320c12755211b0ee61db3cfdc00",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1172",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:05 GMT",
        "ETag": "W/\"dd4862d6-205e-44f9-a851-5d8b9e23909a\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "06ac27db-aa24-4ec1-8f22-42585ba5c756",
        "x-ms-client-request-id": "72b8a320c12755211b0ee61db3cfdc00",
        "x-ms-correlation-request-id": "96fe0bc5-3b86-4842-ba5c-d1faf854e313",
        "x-ms-ratelimit-remaining-subscription-reads": "11734",
        "x-ms-request-id": "854501f7-8a8e-409b-ae09-b2cb83527b08",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155206Z:96fe0bc5-3b86-4842-ba5c-d1faf854e313"
      },
      "ResponseBody": {
        "name": "azsmnet5479",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479",
        "etag": "W/\"dd4862d6-205e-44f9-a851-5d8b9e23909a\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "08ef8886-53e6-4d97-8eb6-0bec9bbb1bc8",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet6657",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479/subnets/azsmnet6657",
              "etag": "W/\"dd4862d6-205e-44f9-a851-5d8b9e23909a\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479/subnets/azsmnet6657?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-21151e284c0e9c07a33ad67ed0bac59e-a64326fc99ec1bdb-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b20de2486e911a226f6d255cd3417258",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "620",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:05 GMT",
        "ETag": "W/\"dd4862d6-205e-44f9-a851-5d8b9e23909a\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7cc61ddf-62ed-4e91-a281-5ad18b8cc605",
        "x-ms-client-request-id": "b20de2486e911a226f6d255cd3417258",
        "x-ms-correlation-request-id": "59ce0921-59d2-40b1-922c-9c0de121e107",
        "x-ms-ratelimit-remaining-subscription-reads": "11733",
        "x-ms-request-id": "f8df4391-05af-4a35-a665-d04dd5ea0839",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155206Z:59ce0921-59d2-40b1-922c-9c0de121e107"
      },
      "ResponseBody": {
        "name": "azsmnet6657",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479/subnets/azsmnet6657",
        "etag": "W/\"dd4862d6-205e-44f9-a851-5d8b9e23909a\"",
        "properties": {
          "provisioningState": "Succeeded",
          "addressPrefix": "10.0.0.0/24",
          "routeTable": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575"
          },
          "delegations": [],
          "privateEndpointNetworkPolicies": "Disabled",
          "privateLinkServiceNetworkPolicies": "Enabled"
        },
        "type": "Microsoft.Network/virtualNetworks/subnets"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-650032f17c4fb8ae3627040ac42c7ab7-69dc92eb73a00996-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "423b76558c4cf739cd3f89df0eb72b14",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1290",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:06 GMT",
        "ETag": "W/\"29566aca-7a4b-4c9b-904c-f9b09bc0e757\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ee7477ac-4e98-4128-9cfd-5abf2b9ea205",
        "x-ms-client-request-id": "423b76558c4cf739cd3f89df0eb72b14",
        "x-ms-correlation-request-id": "e1d1405d-58fd-4db4-8c35-85407052a46e",
        "x-ms-ratelimit-remaining-subscription-reads": "11732",
        "x-ms-request-id": "5fc2157d-6bdd-444f-8a01-84dfa7a9937e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155207Z:e1d1405d-58fd-4db4-8c35-85407052a46e"
      },
      "ResponseBody": {
        "name": "azsmnet1575",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575",
        "etag": "W/\"29566aca-7a4b-4c9b-904c-f9b09bc0e757\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "8cfbfd89-9e8c-4b8f-a9b4-6802e93d241f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4587",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/routeTables/azsmnet1575/routes/azsmnet4587",
              "etag": "W/\"29566aca-7a4b-4c9b-904c-f9b09bc0e757\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9083/providers/Microsoft.Network/virtualNetworks/azsmnet5479/subnets/azsmnet6657"
            }
          ]
        }
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "299429257",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
